--- a/desafio-5-Mongoose/src/views/realTimeProducts.handlebars
+++ b/desafio-5-Mongoose/src/views/realTimeProducts.handlebars
@@ -1,6 +1,6 @@
 <form id="idForm">
     <label for="title">Title</label>
-    <input type="text" required>
+    <input type="text" name="title" required>
     <label for="Description">Description</label>
     <input type="text" name="Description" required>
     <label for="Category">Category</label>
