--- a/desafio-5-Mongoose/src/public/css/style.css
+++ b/desafio-5-Mongoose/src/public/css/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: 'Times New Roman', Times, serif;
     background-color: rgb(211, 247, 242);
     margin: 0;
@@ -23,7 +23,7 @@ input {
 }
 
 input {
-    width: 100%;
+    width: 50%;
     padding: 8px;
     border: 1px solid #ccc;
 }
@@ -36,6 +36,53 @@ button {
     border-radius: 3px;
     cursor: pointer;
   
+} */
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
 }
 
+h1 {
+    text-align: center;
+    color: #333;
+}
 
+form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 30px;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+label,
+input {
+    display: block;
+    margin-bottom: 20px;
+}
+
+input {
+    width: 50%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
